--- a/dev.html
+++ b/dev.html
@@ -21,6 +21,7 @@
     --bgB:#0b1020;
 
     --gameA: rgba(16,26,53,0.78);
+  diag('after bg init');
     --gameB: rgba(16,26,53,0.78);
   }
 
@@ -519,55 +520,19 @@
     text-align:center;
   }
 
-
-  /* ---- Always-visible playfield + panel toggle ---- */
-  :root{ --bottomGuard: 120px; }
-  #game{
-    display:flex;
-    flex-direction:column;
-    height:100svh;
-    overflow:hidden;
-  }
-  header{ flex:0 0 auto; }
-  #arena{
-    flex:1 1 auto;
-    min-height: 220px;
-    padding-bottom: var(--bottomGuard);
-    box-sizing:border-box;
-  }
-  html, body{
-    height:100%;
-    overflow:hidden;
-    overscroll-behavior:none;
-    touch-action:manipulation;
-  }
-  body.panelHidden .row-bg,
-  body.panelHidden .row-rec,
-  body.panelHidden .row-tune{
-    display:none !important;
-  }
-  body.panelHidden header{
-    padding-bottom: 6px !important;
-  }
-  .ghost{
-    background: rgba(255,255,255,0.08);
-    border:1px solid rgba(255,255,255,0.14);
-    color: rgba(255,255,255,0.92);
-    border-radius: 14px;
-    padding: 10px 14px;
-    font-weight: 600;
-  }
 </style>
-
 
 </head>
 
 <body>
+<div id="diagBanner" style="display:none;position:fixed;top:0;left:0;right:0;z-index:999999;background:#0b5; color:#001; padding:6px 10px; font:12px/1.35 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;">
+  <b>DIAG</b> <span id="diagMsg">booting…</span>
+  <button id="diagDumpBtn" style="float:right;background:#001;color:#fff;border:0;border-radius:10px;padding:4px 10px;font-weight:600;">Dump</button>
+</div>
+
 <header>
   <div id="controls">
     <button id="startBtn" class="primary">Play</button>
-      <button id="panelBtn" class="ghost">Panel</button>
-      <button id="soundBtn" class="ghost">Sound: On</button>
     
     <div id="missBar" class="missBar" title="Mistakes allowed (resets each round)">
       <span class="missDot"></span><span class="missDot"></span><span class="missDot"></span>
@@ -657,13 +622,27 @@
 
   <input id="bgFileInput" type="file" accept="image/*" style="display:none" />
 <script>
+/* ==== DIAGNOSTIC (non-invasive) ==== */
+const __DIAG = { last:'', t0: (performance && performance.now ? performance.now() : Date.now()) };
+function diag(msg){
+  try{
+    __DIAG.last = String(msg);
+    const b=document.getElementById('diagBanner');
+    const m=document.getElementById('diagMsg');
+    if(m) m.textContent = __DIAG.last;
+    if(b) b.style.display='block';
+  }catch(e){}
+}
+window.addEventListener('error', (e)=>{ try{ diag('ERROR: ' + (e?.message||'script error')); }catch(_){} });
+window.addEventListener('unhandledrejection', (e)=>{ try{ diag('PROMISE: ' + (e?.reason||'unhandled')); }catch(_){} });
+diag('script start');
+
+
 (() => {
   const game   = document.getElementById("game");
   const arena  = document.getElementById("arena");
   const startBtn = document.getElementById("startBtn");
   
-  const panelBtn = document.getElementById("panelBtn");
-  const soundBtn = document.getElementById("soundBtn");
   // --- Play count + time limit (persistent) ---
   const playCountEl = document.getElementById("playCount");
   const timeLeftEl  = document.getElementById("timeLeft");
@@ -739,8 +718,7 @@
     dots.forEach((d,i)=> d.classList.toggle("used", i < missesUsed));
   }
 
-  \1
-    if(!soundEnabled) return;
+  function playFail(){
     // distinct fail sound (short descending buzz), safe if audio blocked
     try{
       if(!audioCtx) return;
@@ -922,8 +900,6 @@ const endBtn = document.getElementById("endBtn");
   const WAVEFORMS = ["sine", "triangle", "square", "sawtooth"];
 
   let audioCtx = null;
-  let soundEnabled = true;
-
   function ensureAudio() {
     audioCtx ??= new (window.AudioContext || window.webkitAudioContext)();
     if (audioCtx.state === "suspended") audioCtx.resume();
@@ -934,8 +910,7 @@ const endBtn = document.getElementById("endBtn");
   window.addEventListener("touchstart", () => { try{ ensureAudio(); }catch(e){} }, { once:true, passive:true });
 
 
-  \1
-    if(!soundEnabled) return;
+  function playToneForIndex(idx, ms=140) {
     const ctx = ensureAudio();
     const o = ctx.createOscillator();
     const g = ctx.createGain();
@@ -1385,7 +1360,8 @@ const endBtn = document.getElementById("endBtn");
   game.addEventListener("touchend", (e)=>{ tryMarkFromEvent(e); }, {capture:true, passive:false});
 
 
-function initBackgroundPalette(opts){
+function diag('before bg init');
+  initBackgroundPalette(opts){
     const {
       containerId = "bgPalette",
       defaultKey = "deepBlue",
